--- a/style.css
+++ b/style.css
@@ -34,4 +34,34 @@ button, button:focus {
   font-size: 20px;
 }
 
+/* Color Template  */
+.color-primary {
+  color: #003859;
+}
+
+.color-primary-bg {
+  background: #003859;
+}
+
+.color-second {
+  color: #00A5C4;
+}
+
+.color-second-bg {
+  background: #00A5C4;
+}
+
+.color-yellow {
+  color: #FFD289;
+}
+
+.color-yellow-bg {
+  background: #FFD289;
+}
+
+/* Custom CSS */
+.dropdown-arrow {
+  transform: translate(2px, 2px);
+}
+
 /*# sourceMappingURL=style.css.map */
