lesson 03 - best sales carousel (reposition and resize owl-nav buttons)

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,4 +4,5 @@
 @import './include/global.scss';
 @import './include/typography.scss';
 @import './include/color.scss';
+@import './include/best-sales.scss';
 @import './include/custom.scss';
