--- a/style.css
+++ b/style.css
@@ -59,6 +59,39 @@ button, button:focus {
   background: #FFD289;
 }
 
+/* best sales template */
+#best-sales .owl-carousel .product-card .product a {
+  overflow: hidden;
+}
+#best-sales .owl-carousel .product-card .product img {
+  transition: transform 0.5s ease;
+}
+#best-sales .owl-carousel .product-card .product img:hover {
+  transform: scale(1.1);
+}
+#best-sales .owl-carousel .owl-nav button {
+  position: absolute;
+  top: 30%;
+  outline: none;
+}
+#best-sales .owl-carousel .owl-nav button.owl-prev {
+  left: 0;
+}
+#best-sales .owl-carousel .owl-nav button.owl-next {
+  right: 0;
+}
+#best-sales .owl-carousel .owl-nav button.owl-prev span,
+#best-sales .owl-carousel .owl-nav button.owl-next span {
+  font-size: 35px;
+  color: #003859;
+}
+#best-sales .owl-carousel .owl-nav button.owl-prev span {
+  margin-left: -4rem;
+}
+#best-sales .owl-carousel .owl-nav button.owl-next span {
+  margin-right: -4rem;
+}
+
 /* Custom CSS */
 .dropdown-arrow {
   transform: translate(2px, 2px);
