--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,4 +5,5 @@
 @import './include/typography.scss';
 @import './include/color.scss';
 @import './include/best-sales.scss';
+@import './include/special-price.scss';
 @import './include/custom.scss';
