--- a/sass/include/special-price.scss
+++ b/sass/include/special-price.scss
@@ -39,10 +39,12 @@
   }
 }
 
-@media (max-width: 414px) {
+@media (max-width: 483px) {
   #special-price {
     .grid .grid-item {
-      width: 364px;
+      width: 100%;
+      margin-left: 0;
+      margin-right: 0;
     }
   }
 }
