lesson 06 - blogs carousel (owl carousel)

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,4 +7,5 @@
 @import './include/best-sales.scss';
 @import './include/special-price.scss';
 @import './include/banner-ads.scss';
+@import './include/blogs.scss';
 @import './include/custom.scss';
